--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@ charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
+Faker==18.4.0
 fastapi==0.95.0
 h11==0.14.0
 idna==3.4
 pydantic==1.10.7
+python-dateutil==2.8.2
 requests==2.28.2
+six==1.16.0
 sniffio==1.3.0
 starlette==0.26.1
 typing_extensions==4.5.0
