--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
-	"version": 2,
-	"public": false,
-	"builds": [{ "src": "main.py", "use": "@vercel/python" }],
-	"routes": [
-		{"src": "/(.*)", "dest": "main.py"}
-	]
+    "version": 2,
+    "builds": [
+        {
+            "src": "main.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "main.py"
+        }
+    ]
 }
